# yin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  msvc_install_dependencies.bat
src/common/: CMakeLists.txt
src/common/private/: common.c  common_gfx.c  common_pkg.c
src/common/public/: common.h
src/core/: CMakeLists.txt
src/core/private/: core.c  core_binary_serializer.c  core_binary_serializer.h  core_console.c  core_filesystem.c  core_filesystem.h  core_game_interface.c  core_image.c  core_image.h  core_memory_manager.c  core_memory_manager.h  core_model.c  core_model.h  core_private.h  core_profiler.c  core_scheduler.c  core_scheduler.h  world.c  world.h  world_deserialiser.c  world_mesh.c  world_serialiser.c
src/core/private/client/: client.c  client.h  client_console.c  client_gui.c  client_gui.h  client_input.c  client_input.h
src/core/private/client/audio/: audio.c  audio.h  audio_openal.c  audio_wav.c  audio_xaudio2.cpp  micromod.c
src/core/private/client/renderer/: renderer.c  renderer.h  renderer_camera.c  renderer_draw.c  renderer_flare.c  renderer_font.c  renderer_font.h  renderer_material.c  renderer_material.h  renderer_particle.c  renderer_particle.h  renderer_rendertarget.c  renderer_scenegraph.c  renderer_scenegraph.h  renderer_shaders.c  renderer_sprite.c  renderer_texture.c  renderer_texture.h  renderer_viewport.c  renderer_visibility.c  renderer_visibility.h  renderer_world.c
src/core/private/editor/: editor.c  editor.h  editor_commands.c  editor_material_selector.c
src/core/private/entity/: entity.c  entity.h  entity_component.c  entity_manager.c
src/core/private/legacy/: actor.c  actor.h
src/core/private/legacy/actors/: actor_player.c  actor_rpg_shared.h  sg_actors.c
src/core/private/net/: net.c  net.h  net_var.c
src/core/private/scripting/: lisp_interface.c
src/core/private/server/: server.c  server.h
src/core/public/yin/: core.h  core_base.h  core_camera.h  core_editor.h  core_entity.h  core_format_gfx.h  core_game.h  core_input.h  core_interfaces.h  core_renderer.h  core_shell.h  core_world.h
src/dickens/lib/: CMakeLists.txt
src/dickens/lib/private/: dickens_assembler.c  dickens_builtins.c  dickens_compiler.c  dickens_lexer.c  dickens_parser.c  dickens_private.h
src/dickens/lib/public/: dickens.h
src/engine/: CMakeLists.txt
src/engine/private/: console.c  engine_private.h  filesystem.c  filesystem.h  game_interface.c  image.c  memory_manager.c  memory_manager.h  model.c  model.h  profiler.c  protocol.h  scheduler.c  scheduler.h  serializer.c  serializer.h  world.c  world.h  world_deserialiser.c  world_mesh.c  world_serialiser.c  yin.c
src/engine/private/client/: client.c  client.h  client_console.c  client_gui.c  client_gui.h  client_input.c  client_input.h
src/engine/private/client/audio/: audio.c  audio.h  audio_openal.c  audio_wav.c  audio_xaudio2.cpp  micromod.h  sdlplayer.c
src/engine/private/client/renderer/: camera.c  flare.c  flare.h  font.c  font.h  mesh.c  mesh.h  particle.c  particle.h  renderer.c  renderer.h  renderer_draw.c  renderer_material.c  renderer_material.h  sprite.c  (+10 more)
src/engine/private/editor/: editor.c  editor.h  editor_commands.c  editor_lightmapper.c  editor_material_selector.c
src/engine/private/entity/: entity.c  entity.h  entity_component.c  entity_manager.c
src/engine/private/legacy/: actor.c  actor.h
src/engine/private/net/: net.c  net.h  net_var.c
src/engine/private/scripting/: lisp_interface.c  lisp_interface.h
src/engine/private/server/: server.c  server.h
src/engine/private/vm/: vm.c  vm.h
src/engine/public/: engine_client_input.h  engine_public.h  engine_public_base.h  engine_public_camera.h  engine_public_editor.h  engine_public_entity.h  engine_public_game.h  engine_public_interfaces.h  engine_public_renderer.h  engine_public_vm.h  engine_public_world.h  yin_format_gfx.h  yin_os.h
src/game/: CMakeLists.txt
src/game/private/: game.c  game_component_camera.c  game_component_input.c  game_component_mesh.c  game_component_movement.c  game_component_movement.h  game_component_transform.c  game_component_transform.h  game_menu.c  game_menu.h  game_private.h
src/game/private/fw/: fw_building.c  fw_building.h  fw_character.c  fw_character.h  fw_component_stats.c  fw_component_stats.h  fw_game.c  fw_game.h  fw_inventory.c  fw_inventory.h  fw_name_generator.c  fw_simulation.h  fw_terrain.c  fw_terrain.h  fw_weapon.c  fw_weapon.h  ideas
src/game/private/onemany/: om_game.c  om_game.h
src/game/public/: game_interface.h
src/gui/: CMakeLists.txt
src/gui/private/: gui.c  gui_button.c  gui_cursor.c  gui_draw.c  gui_font_bitmap.c  gui_image.c  gui_panel.c  gui_panel.h  gui_private.h
src/gui/public/: gui_public.h
src/lisp/: CMakeLists.txt
src/lisp/private/: lisp.cpp  lisp_c.cpp  lisp_gc.cpp  lisp_opt.cpp  lisp_private.h  symbols.h
src/lisp/public/: lisp.h  lisp_opt.h
src/node/: CMakeLists.txt
src/node/private/: node.c  node_ds_common.c  node_lexer.c  node_parser.c  node_preprocessor.c  node_private.h
src/node/public/: node.h
src/node/public/yin/: node.h
src/pkgman/: CMakeLists.txt  pack_image.c  pack_model.c  pack_model_smd.c  parser.c  parser.h  pkgman.c  pkgman.h  txc_compress_dxtn.c  txc_dxtn.h  txc_fetch_dxtn.c
src/pkgman/frontend/: pkggui.c  pkggui.h
src/shells/editor/: CMakeLists.txt  ConsoleFrame.cpp  ConsoleFrame.h  MainWindow.cpp  MainWindow.h  editor.cpp  editor.h  editor_entity_window.cpp  editor_entity_window.h  editor_face_inspector.cpp  editor_face_inspector.h  editor_material_window.cpp  editor_material_window.h  editor_viewport_frame.cpp  editor_viewport_frame.h
src/shells/editor/qt/: editor.cpp  editor.h  editor_entitytemplate.cpp  editor_entitytemplate.h  editor_log.cpp  editor_log.h  editor_mainwindow.cpp  editor_mainwindow.h
src/shells/launcher_sdl2/: CMakeLists.txt  launcher.c  launcher.h  launcher.rc
src/tools/modelconv/: CMakeLists.txt  modelconv.c  modelconv.h  modelconv_loader_md2.c  modelconv_loader_ocmsh.c  modelconv_loader_vmdl.c
src/tools/old/bsp2geo/: CMakeLists.txt  bsp.c  bsp.h  bsp2geo.c  bsp2geo.h
(+49 files in other folders)
